syntax = "proto3";
option go_package = "coreum/currency";

service Currency {
  rpc GetRate(RateRequest) returns (RateResponse);
  rpc RateList(RateListRequest) returns (stream RateListResponse);
  rpc BatchConversion(BatchConversionRequest) returns (BatchConversionResponse);
  rpc SubscribeRates(stream RateRequest) returns (stream RateResponse);
}

message RateRequest {
  string Base = 1;
  string Destination = 2;
}

message RateResponse {
  string Base = 1;
  string Destination = 2;
  double Rate = 3;
}

message RateListRequest {
  optional int32 page_number = 1;
  optional int32 result_per_page = 2;
}
message RateListResponse {}

message BatchConversionRequest {
  repeated string symbols = 1;
}
message BatchConversionResponse {
  repeated RateResponse Symbols = 1;
}
